--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.209",
     "react-router-dom": "^6.22.0",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.161.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
