--- a/react-ztm/capStone/package.json
+++ b/react-ztm/capStone/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "sass": "^1.74.1"
   },
