--- a/react-ztm/capStone/package.json
+++ b/react-ztm/capStone/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "redux-saga": "^1.3.0",
     "sass": "^1.74.1",
     "styled-components": "^6.1.11"
   },
