--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "firebase": "^10.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
+    "redux-thunk": "^3.1.0",
+    "reselect": "^5.1.1",
     "sass": "^1.74.1",
     "styled-components": "^6.1.11"
   },
