--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "redux-thunk": "^3.1.0",
